--- a/main/Templates/main/register.html
+++ b/main/Templates/main/register.html
@@ -3,7 +3,7 @@
         <form method="POST">
             {% csrf_token %}
             {{form.as_p}}
-            <button class="btn" style="background-color:teal; color:yellow" type="submit">register</button>
+            <button class="btn">register</button>
         </form>
 If you already have an account, <strong href="/login"><strong></strong>login</strong></a> instead.
     {% endblock %}
