--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="/static/styles.css" type="text/css">
 </head>
    <body>
     <header role = "banner">
