Connections to static files work

--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/static/styles.css" type="text/css">
-</head>
+    <head>
+        <link rel="stylesheet" href="{% static 'styles.css' %}" type="text/css">
+    </head>
    <body>
     <header role = "banner">
         <h1> Ryan's Programming Projects</h1>
