Connections to static files work

--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -8,10 +8,9 @@
     <header role = "banner">
         <h1> Ryan's Programming Projects</h1>
     </header>
-    </article>
-    <div class="container">
+    <article>
         {% block content %}
         {% endblock %}
-    </div>
+    </article>
 </body>
 </html>
