--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -1,8 +1,8 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="{% static 'styles.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
     </head>
    <body>
     <header role = "banner">
