--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -7,8 +7,9 @@
    <body>
     <header role = "banner" class="banner">
         <h1> Remember the Alamo!</h1>
-        <button href="" class="page left-align"><h3>>Home</h3></button>
-        <button href="" class="page right-align"><h3>About Me</h3></button>
+        <button class="page"><a href="/" ><h3>>Home</h3></a></button>
+        <button class="page"><a href="/register" ><h3>>Register</h3></a></button>
+        <button class="page"><a href="/aboutme" ><h3>>About Me</h3></a></button>
     </header>
             <script></script>
     <div class="content">
