--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -7,9 +7,13 @@
    <body>
     <header role = "banner" class="banner">
         <h1> Remember the Alamo!</h1>
-        <button class="page"><a href="/" ><h3>>Home</h3></a></button>
-        <button class="page"><a href="/register" ><h3>>Register</h3></a></button>
-        <button class="page"><a href="/aboutme" ><h3>>About Me</h3></a></button>
+        <ul class="nav_bar">
+            <li class="nav_item"><a href="/" ><h3>>Home</h3></a></li>
+            <li class="nav_item"><a href="/register" ><h3>>Register</h3></a></li>
+            <li class="nav_item"><a href="/aboutme" ><h3>>About Me</h3></a></li>
+        </ul>
+        
+        
     </header>
             <script></script>
     <div class="content">
