--- a/main/Templates/main/home.html
+++ b/main/Templates/main/home.html
@@ -1,6 +1,6 @@
 {% extends "main/header.html" %}
     {% block content %}
-    <header class="page_title">
+    <header>
     </header>
     {% for pro in projects %}
         <article>
