--- a/main/Templates/main/register.html
+++ b/main/Templates/main/register.html
@@ -1,9 +1,12 @@
 {% extends "main/header.html" %}
     {% block content %}
+    <div class="register">
+        <header class="project_title"></header>
         <form method="POST">
             {% csrf_token %}
             {{form.as_p}}
-            <button class="btn">register</button>
+            <button class="btn">Register</button>
         </form>
+    </div>
 If you already have an account, <strong href="/login"><strong></strong>login</strong></a> instead.
     {% endblock %}
