--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
     </head>
    <body>
+   <div class="fixed">
     <header role = "banner" class="banner">
         <h1> Remember the Alamo!</h1>
         <ul class="nav_bar">
@@ -12,9 +13,8 @@
             <li class="nav_item"><a href="/register" ><h3>>Register</h3></a></li>
             <li class="nav_item"><a href="/aboutme" ><h3>>About Me</h3></a></li>
         </ul>
-        
-        
     </header>
+   </div>
             <script></script>
     <div class="content">
         <article>
