--- a/assets/style.css
+++ b/assets/style.css
@@ -18,14 +18,19 @@ header {
 
 .nav_item {
     float: left;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    border-right: 2px solid black;
+}
+
+.nav_item:hover {
+    background-color: grey;
 }
 
 .nav_item a {
-    display: block;
-    color: yellow;
-    text-align: center;
-    text-decoration: none;
-    padding: 14px 16px;
+   color: yellow;
+   text-decoration: none;
 }
 
 /*
