--- a/main/Templates/main/aboutme.html
+++ b/main/Templates/main/aboutme.html
@@ -15,42 +15,61 @@
         I tried a fundementals course in the summer of Freshman year. I fell in love instantly
         <img class ="inline_image" src="{% static 'heart.png' %}">
         and switched my degree next semester.
-        <br>
         My courses have taught me the foundations of CS. Online tutorials and personal projects have taught me specific
         languages and frameworks.
     </p>
-    <h3>Best Skills</h3>
-        <ul>
-            <li>Java</li>
-            <li>Python</li>
-            <li>Logic</li>
-            <li>Motivated to Learn</li>
-        </ul>
-    <h3>Other Skills</h3>
-        <ul>
-            <li>Powershell</li>
-            <li>Django</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Writing</li>
-            <li>Team Player</li>
-        </ul>
-    <h3>Next Skills</h3>
-        <ul>
-            <li>Java Script</li>
-            <li>Haskell</li>
-            <li>Corporate Programming</li>
-        </ul>
-    
-    
+    <div class ="row">
+        <div class="column" id="first">
+        <h3>Best Skills</h3>
+            <ul>
+                <li class="skill">Java
+                    <span class="skill">I have the most experience with Java. I have taken and tutored for two courses
+                    using Java.</span>
+                </li>
+                <li class="skill">Python
+                    <span class="skill">I am self taught, and have a good  understanding of the language. This website
+                        was created using Python and the Django framework!</span>
+                </li>
+                <li class="skill">Logic
+                    <span class="skill">I have an intuitive understanding of logic. At Charles River Development, I got a
+                    perfect score on the logic test in half the time given.</span>
+                </li>
+                <li class="skill">Motivated to Learn
+                    <span class="skill">Two years ago I had never touched a programming language.
+                        University taught me Java and the fundamentals, I did the rest. </span>
+                </li>
+                <li class="skill">Writing
+                    <span class="skill"></span>
+                </li>
+            </ul>
+        </div>
+        <div class="column">
+        <h3>Other Skills</h3>
+            <ul>
+                <li class="skill">Powershell</li>
+                <li class="skill">Django</li>
+                <li class="skill">HTML</li>
+                <li class="skill">CSS</li>
+                <li class="skill">Team Player</li>
+            </ul>
+        </div>
+        <div class="column">
+        <h3>Next Skills</h3>
+            <ul>
+                <li class="skill">Java Script</li>
+                <li class="skill">Haskell</li>
+                <li class="skill">Professional Programming</li>
+                <br>
+                <br>
+            </ul>
+        </div>
+    </div>
     <h3>Hobbies and Interests</h3>
         <h4>History</h4>
             <p>
                 I have always been fascinated by the stories of our past. The sheer variety of cultures and socities
                 is amazing. If catastrophe wipes out the Internet Age I would try my hand as a history professor.
-                <br>
                 <a>Dan Carlin's Hardcore History Podcast</a> is my favorite historical storytelling.
-                <br>
                 <a>The History of the World in Eight Glasses</a> demonstrates that simple products can change the world.
             </p>
         <h4>Reading</h4>
