--- a/main/Templates/main/aboutme.html
+++ b/main/Templates/main/aboutme.html
@@ -23,23 +23,23 @@
         <h3>Best Skills</h3>
             <ul>
                 <li class="skill">Java
-                    <span class="skill">I have the most experience with Java. I have taken and tutored for two courses
+                    <span class="hidden"><br>I have the most experience with Java. I have taken and tutored for two courses
                     using Java.</span>
                 </li>
                 <li class="skill">Python
-                    <span class="skill">I am self taught, and have a good  understanding of the language. This website
+                    <span class="hidden"><br>I am self taught, and have a good  understanding of the language. This website
                         was created using Python and the Django framework!</span>
                 </li>
                 <li class="skill">Logic
-                    <span class="skill">I have an intuitive understanding of logic. At Charles River Development, I got a
+                    <span class="hidden"><br>I have an intuitive understanding of logic. At Charles River Development, I got a
                     perfect score on the logic test in half the time given.</span>
                 </li>
                 <li class="skill">Motivated to Learn
-                    <span class="skill">Two years ago I had never touched a programming language.
+                    <span class="hidden"><br>Two years ago I had never touched a programming language.
                         University taught me Java and the fundamentals, I did the rest. </span>
                 </li>
                 <li class="skill">Writing
-                    <span class="skill"></span>
+                    <span class="hidden"><br></span>
                 </li>
             </ul>
         </div>
