--- a/main/Templates/main/aboutme.html
+++ b/main/Templates/main/aboutme.html
@@ -12,7 +12,8 @@
     {% load static %}
     <p class="page_description">
         I am a third year computer science student at Northeastern University. I had not touched programming until
-        I tried a fundementals course in the summer of Freshman year. I fell in love instantly
+        I tried a fundementals course in the summer of Freshman year. I fell in love
+        <img class="inline_image" src="{% static 'heart.png' %}">instantly
         and switched my degree next semester.
         My courses have taught me the foundations of CS. Online tutorials and personal projects have taught me specific
         languages and frameworks.
@@ -109,7 +110,7 @@
                 with good friends. Why make small talk when you could be Settling Catan?
             </p>
             <img id="profile_pic" src="{% static 'ProfilePic.jfif' %}">
-            <a href="https://dnd.wizards.com/" target="_blank"><img src="{% static 'gaming_with_da_boys.png' %}" id="dungeons_and_dragons" ></a>
+            <a href="https://dnd.wizards.com/" target="_blank"><img src="{% static 'gaming_with_da_boys.png' %}" id="dungeons_and_dragons"></a>
 </body>
 </html>
 {% endblock %}
