--- a/main/Templates/main/aboutme.html
+++ b/main/Templates/main/aboutme.html
@@ -110,7 +110,8 @@
                 with good friends. Why make small talk when you could be Settling Catan?
             </p>
             <img id="profile_pic" src="{% static 'ProfilePic.jfif' %}">
-            <a href="https://dnd.wizards.com/" target="_blank"><img src="{% static 'gaming_with_da_boys.png' %}" id="dungeons_and_dragons"></a>
+            <a href="https://dnd.wizards.com/" target="_blank">
+                <img src="{% static 'gaming_with_da_boys.png' %}" id="dungeons_and_dragons" alt="Games with the Boys!"></a>
 </body>
 </html>
 {% endblock %}
