--- a/main/Templates/main/home.html
+++ b/main/Templates/main/home.html
@@ -8,7 +8,7 @@
             </header>
             <section class="project">
                 <p class="project_description">{{pro.project_description}}</p>
-                <a href={{pro.project_github}} class= "project_description git_link" target="_blank">GitHub Repository</a>
+                <a href={{pro.project_github}} class= "git_link" target="_blank">GitHub Repository</a>
                 <br>
                 <img src="{{ pro.project_image.url }}" class="project_image"/>
                 <br>
