--- a/main/Templates/main/aboutme.html
+++ b/main/Templates/main/aboutme.html
@@ -109,9 +109,12 @@
                 Chips, drinks and games are great day in my book. From Risk to Bloodborn I absolutely love boardgames
                 with good friends. Why make small talk when you could be Settling Catan?
             </p>
-            <img id="profile_pic" src="{% static 'ProfilePic.jfif' %}">
-            <a href="https://dnd.wizards.com/" target="_blank">
-                <img src="{% static 'gaming_with_da_boys.png' %}" id="dungeons_and_dragons" alt="Games with the Boys!"></a>
+            <div>
+                <img id="profile_pic" class="about_me_pictures" src="{% static 'ProfilePic.jfif' %}">
+                <a href="https://dnd.wizards.com/" target="_blank">
+                    <img src="{% static 'gaming_with_da_boys.png' %}" class="about_me_pictures float left" alt="Games with the Boys!">
+                </a>
+            </div>
 </body>
 </html>
 {% endblock %}
