--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -1,11 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Hi
+{% extends "main/header.html" %}
+{% block content %}
+<body class="about_me">
+    <div class="intro">
+        <h3 id="seeker-title">Seeker!</h3>
+        <p class="intro-text">Seeker is a game where you can use different search algorithms to find the golden treasure.</p>
+        <div class="instructions">
+            <p class="intro-text">Click here for instructions.</p>
+            <p class="hidden-text">Greetings seeker! You are creating a map to find buried treasure. First design your map, then choose
+                a search algoirthm to find your treasure!
+                <ul class="instruction-list">
+                    <li class="instruction-item">
+                        <h4 class="instruction-header">Run</h4>
+                        <br>
+                        <p class=intro-text>Click run to apply the selected search algorithm on the current treasure map.</p>
+                    </li>
+                    <li class="instruction-item">
+                        <h4 class="instruction-header">Select Algorithm</h4>
+                        <br>
+                        <p class=intro-text>Choose an algorithm from the dropdown menu to select a search algorithm to use. Then hit run to find a path!</p>
+                    </li>
+                    <li class="instruction-item">
+                        <h4 class="instruction-header">Select Change</h4>
+                        <br>
+                        <p class=intro-text>Choose how you want to edit the map. Select the type of object you want to create and
+                            each mouse click on a tile will turn the tile to the selected object.
+                        </p>
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+    <ul class="seeker-bar">
+        <li class="seeker-item" id="run">Run</li>
+        <li class="seeker-item" id="algorithm">Select Algorithm</li>
+        <li class="seeker-item" id="change">Select Change</li>
+    </ul>
+    <button id="create">Create cell</button>
+    <div class="grid">
+
+    </div>
 </body>
 </html>
+{% endblock %}
