On click will add a cell

--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -35,10 +35,8 @@
         <li class="seeker-item" id="algorithm">Select Algorithm</li>
         <li class="seeker-item" id="change">Select Change</li>
     </ul>
-    <button id="create">Create cell</button>
-    <div class="grid">
-
-    </div>
+    <button id="work" onclick=addCell()>Work</button>
+    <div id="map"></div>
 </body>
 </html>
 {% endblock %}
