--- a/assets/style.css
+++ b/assets/style.css
@@ -7,10 +7,19 @@ Designed for seeker.html
     --gridHeight: 300px;
 }
 
-.grid {
-    display: grid;
+.map {
     grid-template-rows: repeat(var(--rowNum), var(--gridHeight));
     grid-template-columns: repeat(var(--colNum), auto);
+    width: 100px;
+    height: 100px;
+    color: white;
+    background-color: coral;
+}
+
+.map-item {
+    width: 100px;
+    height: 100px;
+    background-color: purple;
 }
 
 .seeker-bar {
@@ -163,7 +172,6 @@ Designed for the About Me page.
 .column li {
     list-style-type: circle;
     list-style-image: url('tiny_wolf.jpg');
-    list-style-image-width: 10px;
 }
 
 .row:after {
@@ -267,8 +275,8 @@ Designed for the About Me page.
 
 .bottom_pictures {
     box-sizing: border-box;
-    max_width = 390px;
-    max_height = 390px;
+    max-width: 390px;
+    max-height: 390px;
 }
 
 .bottom_picture {
