Graph generates rows * cols number of cells

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,8 @@ Designed for seeker.html
     background-color: coral;
 }
 
-.map-item {
+.cell {
+    
     width: 100px;
     height: 100px;
     background-color: purple;
