--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -35,7 +35,7 @@
         <li class="seeker-item" id="algorithm">Select Algorithm</li>
         <li class="seeker-item" id="change">Select Change</li>
     </ul>
-    <button id="work" onclick=addCell()>Work</button>
+    <button id="work" onclick=createGraph()>Work</button>
     <div id="map"></div>
 </body>
 </html>
