--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -4,6 +4,12 @@
     <div class="intro">
         <h3 id="seeker-title">Seeker!</h3>
         <p class="intro-text">Seeker is a game where you can use different search algorithms to find the golden treasure.</p>
+        <div id="working-map">
+            <div class="working-cell">1</div>
+            <div class="working-cell" id="2">2</div>
+            <div class="working-cell" id="3">3</div>
+            <div class="working-cell" id="4">4</div>
+        </div>
         <div class="instructions">
             <p class="intro-text">Click here for instructions.</p>
             <p class="hidden-text">Greetings seeker! You are creating a map to find buried treasure. First design your map, then choose
@@ -35,7 +41,7 @@
         <li class="seeker-item" id="algorithm">Select Algorithm</li>
         <li class="seeker-item" id="change">Select Change</li>
     </ul>
-    <button id="work" onclick=createGraph()>Work</button>
+    <button id="work" onclick=addCell()>Work</button>
     <div id="map"></div>
 </body>
 </html>
